# anki-deck-gen

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  __main__.py  pyproject.toml  requirements-dev.txt  requirements.txt
media/: ascii-data.json
media/l_odyssee/: lockfile.json
pre_commit_hooks/ankidg_gen_init_files/: __init__.py  app.py  error.py  export_declarations.py  init_generator.py  patterns.py
pre_commit_hooks/ankidg_gen_init_files/result/: __init__.py  result.py  result_status.py
pre_commit_hooks/ankidg_tests/: __init__.py  test_gen_init_files.py
pre_commit_hooks/ankidg_update_templates/: __init__.py  app.py  dirs.py
pre_commit_hooks/gen-init-files/: __main__.py  ast_errors.py  ast_tools.py  async_wrapper.py  init_generator.py
src/anki_deck_gen/: __init__.py  __main__.py  add.py  app.py  argument_parser.py  media.py
src/anki_deck_gen/app/: __init__.py  app.py  logger.py  versions.py
src/anki_deck_gen/ascii_codes/: __init__.py  ascii_data.py  ascii_model.py  generate_deck.py  generate_note.py
src/anki_deck_gen/genanki/: __init__.py  auto_deck.py  auto_model.py  models.py  seeded_id.py
src/anki_deck_gen/genanki_ext/: __init__.py  auto_deck.py  auto_model.py  models.py  text_utils.py
src/anki_deck_gen/l_odyssee/: __init__.py  app.py  cached_note.py  deck_id.py  generate_package.py  lockfile.py  required_input.py  update_lockfile.py
src/ankidg_core/: __init__.py  base_model.py  dirs.py  file_model.py  mut_map_default_view.py  reiterator.py  strtools.py
src/genanki_ext/: __init__.py  logged_classes.py  models.py  random_id.py  str_classes.py  text_utils.py
src/genanki_ext/model_data/: __init__.py  metadata.py  model_data.py  template.py
src/genanki_ext/model_data/reversed_front_media_text_input/: metadata.json  style.css
src/genanki_ext/model_data/reversed_front_media_text_input/Card 1/: qfmt.html
src/genanki_ext/model_data/reversed_front_media_text_input/Card 2/: afmt.html  qfmt.html
templates/: .pre-commit-config.yaml.jinja
typings/cached_property/: __init__.pyi
typings/genanki/: __init__.pyi  apkg_col.pyi  apkg_schema.pyi  builtin_models.pyi  card.pyi  deck.pyi  model.pyi  note.pyi  package.pyi  util.pyi  version.pyi
typings/pyperclip/: __init__.pyi  __main__.pyi
