# dev tools
[tool.black]
line-length = 90
target-version = ["py310", "py311", "py312"]
skip-magic-trailing-comma = true

[tool.isort]
profile = "black"
line_length = 90

[tool.basedpyright]
reportImplicitStringConcatenation = false
reportUnknownMemberType = false
pythonVersion = "3.10"

# packaging
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "anki-deck-gen"
version = "0.1.0"
authors = [
    { name="Ernest Izdebski", email="44341687+ernieIzde8ski@users.noreply.github.com" }
]
description = "A generator for my Anki decks."
readme = { file = "README.md", content-type="text/markdown" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]
license = { file = "LICENSE" }
scripts = { "anki-deck-gen" = "anki_deck_gen.app:app" }

[project.urls]
Homepage = "https://github.com/ernieIzde8ski/anki-deck-gen"
Issues =  "https://github.com/ernieIzde8ski/anki-deck-gen/issues"

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

[tool.setuptools.packages.find]
where = ["src"]
