# devel tools
[tool.black]
line-length = 90
target-version = ["py310", "py311", "py312"]
skip-magic-trailing-comma = true

[tool.isort]
profile = "black"
line_length = 90

[tool.basedpyright]
reportImplicitStringConcatenation = false
pythonVersion = "3.12"
stubPath = "typings"
ignore = ["typings"]

# packaging
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "anki-deck-gen"
description = "A generator for my Anki decks."
readme = { file = "README.md", content-type="text/markdown" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["dependencies", "optional-dependencies", "version"]
license = { file = "LICENSE" }

[[project.authors]]
name = "Ernest Izdebski"
email = "44341687+ernieIzde8ski@users.noreply.github.com"

[project.urls]
Homepage = "https://github.com/ernieIzde8ski/anki-deck-gen"
Issues =  "https://github.com/ernieIzde8ski/anki-deck-gen/issues"

[tool.setuptools.packages.find]
where = ["src", "pre_commit_hooks"]

[project.scripts]
anki-deck-gen = "anki_deck_gen.app:app"
"adg.gen-init-files" = "ankidg_gen_init_files.app:app"
"adg.update-templates" = "ankidg_update_templates.app:app"

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }
optional-dependencies = { devel = { file = "requirements-dev.txt" }}
version = { attr = "ankidg_core.version.__version__" }
